crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__parameters_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/parameters_node.rb
---
def a(b, c, d) end
def required_only(x, y, z) end
def with_optionals(
  a, b = 1, c = "default"
  )
end
def with_rest(*args) end
def with_posts(a, *rest, b) end
def with_keywords(a:, b: 2) end
def with_keyword_rest(**kwargs) end
def with_block(&block) end
def all_params(
  req,
  opt = 1,
  *rest,
  post,
  kw:,
  kw_opt: 3,
  **kw_rest,
  &blk
  )
end
def no_params end
