crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__parentheses_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/parentheses_node.rb
---
****FORMATTED****
(10.+(34))
(
  foo.+(bar).+(baz)
  foo.+(bar).+(baz)
  foo.+(bar).+(baz)
  foo.+(bar).+(baz)
  foo.+(bar).+(baz)
  foo.+(bar).+(baz)
)

****AST****
ProgramNode: "(10 + 34)\n\n(foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz;)"
__ParenthesesNode: "(10 + 34)"
____StatementsNode: "10 + 34"
______CallNode: "10 + 34"
________IntegerNode: "10"
________IntegerNode: "34"
__ParenthesesNode: "(foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz;)"
____StatementsNode: "foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz; foo + bar + baz"
______CallNode: "foo + bar + baz"
________CallNode: "foo + bar"
__________CallNode: "foo"
__________CallNode: "bar"
________CallNode: "baz"
______CallNode: "foo + bar + baz"
________CallNode: "foo + bar"
__________CallNode: "foo"
__________CallNode: "bar"
________CallNode: "baz"
______CallNode: "foo + bar + baz"
________CallNode: "foo + bar"
__________CallNode: "foo"
__________CallNode: "bar"
________CallNode: "baz"
______CallNode: "foo + bar + baz"
________CallNode: "foo + bar"
__________CallNode: "foo"
__________CallNode: "bar"
________CallNode: "baz"
______CallNode: "foo + bar + baz"
________CallNode: "foo + bar"
__________CallNode: "foo"
__________CallNode: "bar"
________CallNode: "baz"
______CallNode: "foo + bar + baz"
________CallNode: "foo + bar"
__________CallNode: "foo"
__________CallNode: "bar"
________CallNode: "baz"
