crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__pinned_expression_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/pinned_expression_node.rb
---
foo in ^(bar)
