crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__pinned_variable_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/pinned_variable_node.rb
---
****FORMATTED****
foo in ^bar

****AST****
ProgramNode: "foo in ^bar"
__MatchPredicateNode: "foo in ^bar"
____CallNode: "foo"
____PinnedVariableNode: "^bar"
______LocalVariableReadNode: "bar"
