crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__post_execution_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/post_execution_node.rb
---
****FORMATTED****
END { foo }

****AST****
ProgramNode: "END { foo }"
__PostExecutionNode: "END { foo }"
____CallNode: "foo"
