crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__pre_execution_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/pre_execution_node.rb
---
****FORMATTED****
BEGIN { foo }

****AST****
ProgramNode: "BEGIN { foo }"
__PreExecutionNode: "BEGIN { foo }"
____CallNode: "foo"
