crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__range_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/range_node.rb
---
****FORMATTED****
1..2
if a.=~(/left/) ... b.=~(/right/)
  c
end

****AST****
ProgramNode: "1..2\nc if a =~ /left/ ... b =~ /right/"
__RangeNode: "1..2"
____IntegerNode: "1"
____IntegerNode: "2"
__IfNode: "c if a =~ /left/ ... b =~ /right/"
____FlipFlopNode: "a =~ /left/ ... b =~ /right/"
______CallNode: "a =~ /left/"
________CallNode: "a"
________RegularExpressionNode: "/left/"
______CallNode: "b =~ /right/"
________CallNode: "b"
________RegularExpressionNode: "/right/"
____CallNode: "c"
