crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__redo_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/redo_node.rb
---
****FORMATTED****
redo

****AST****
ProgramNode: "redo"
__RedoNode: "redo"
