crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__regular_expression_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/regular_expression_node.rb
---
****FORMATTED****
/foo/i

****AST****
ProgramNode: "/foo/i"
__RegularExpressionNode: "/foo/i"
