crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__required_keyword_parameter_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/required_keyword_parameter_node.rb
---
def a(b:) end
